--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VisBlue Services Site</title>
+    <title>VisBlue Services App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="test"></div>
+    <div id="menu">
+        <img src="graphics/Visblue logo.png" alt="VisBlue logo">
+        <h2>VisBlue service app</h2>
+        <button id="menuBtn">knap 1</button>
+        <button id="menuBtn">knap 2</button>
+        <button id="menuBtn">knap 3</button>
+    </div>
+
+    <hr>
+
+    <main>
+    <div id="data">
+        <p>Her er data</p>
+    </div>
+    </main>
     
     <script src="script.js"></script>
 </body>
