--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VisBlue Services App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://testserviceapptest.azurewebsites.net/style.css">
 </head>
 <body>
     <div id="menu">
@@ -27,6 +26,6 @@
     </div>
     </main>
     
-    <script src="script.js"></script>
+    <script src="https://testserviceapptest.azurewebsites.net/script.js"></script>
 </body>
 </html>
