--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VisBlue Services App</title>
-    <link rel="stylesheet" href="https://testserviceapptest.azurewebsites.net/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="menu">
@@ -26,6 +26,6 @@
     </div>
     </main>
     
-    <script src="https://testserviceapptest.azurewebsites.net/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
