--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,6 @@
     </div>
     </main>
     
-    <script src="script.js"></script>
+    <script src="/client/script.js"></script>
 </body>
 </html>
