--- a/client/index.html
+++ b/client/index.html
@@ -26,8 +26,8 @@
     </div>
     </main>
     
-    <!--<script src="/client/script.js"></script> -->
-    <script>
+    <script src="script.js"></script> 
+    <!--<script>
         const API_URL = "https://testserviceapptest.azurewebsites.net/data_update"
 
         var dataList = [];
@@ -79,7 +79,7 @@
                 }
             });
         }
-    </script>
+    </script> -->
 
 </body>
 </html>
