--- a/client/support.html
+++ b/client/support.html
@@ -11,19 +11,16 @@
     <div id="menu">
         <img src="graphics/Visblue logo.png" alt="VisBlue logo">
         <h2>VisBlue service app</h2>
-        <!--
-        <button id="menuBtn">knap 1</button>
-        <button id="menuBtn">knap 2</button>
-        <button id="menuBtn">knap 3</button> 
-        -->
-        <a href="support.html">support</a>
     </div>
 
     <hr>
 
     <main>
-    <div id="data">
-        <p>Her skal data vises</p>
+    <div id="content">
+        <img src="graphics/Blank Diagram.png" alt="LucidChart Diagram">
+        <p>
+            Beskrivelse af hvordan appen virker...
+        </p>
     </div>
     </main>
     
